Entregable3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    IDENTIFIER
    MINUS

Grammar

Rule 0     S' -> S
Rule 1     S -> entries
Rule 2     entries -> entry entries
Rule 3     entries -> entry
Rule 4     entry -> log_line blocks_opt
Rule 5     log_line -> LBRACKET DATE TIME RBRACKET LOGLEVEL ENTRY_NUMBER ENTRY_MESSAGE
Rule 6     blocks_opt -> blocks
Rule 7     blocks_opt -> <empty>
Rule 8     blocks -> block blocks
Rule 9     blocks -> block
Rule 10    block -> diagnostic_block
Rule 11    block -> boot_block
Rule 12    block -> crash_block
Rule 13    block -> backup_block
Rule 14    diagnostic_block -> BEGIN_DIAGNOSTIC check_list END_DIAGNOSTIC
Rule 15    check_list -> check_line check_list
Rule 16    check_list -> check_line
Rule 17    check_line -> CHECK STRING ARROW LBRACE RESULT result_value COMMA LATENCY STRING RBRACE SEMICOLON
Rule 18    CHECK_STRING -> VIDEO
Rule 19    CHECK_STRING -> AUDIO
Rule 20    CHECK_STRING -> NETWORK
Rule 21    CHECK_STRING -> STORAGE
Rule 22    result_value -> PASS
Rule 23    result_value -> FAIL
Rule 24    result_value -> STRING
Rule 25    boot_block -> BEGIN_BOOT_SEQUENCE step_list END_BOOT_SEQUENCE
Rule 26    step_list -> step_line step_list
Rule 27    step_list -> step_line
Rule 28    step_line -> STEP STRING SEMICOLON
Rule 29    crash_block -> BEGIN_CRASH_REPORT crash_content END_CRASH_REPORT
Rule 30    crash_content -> error_code_line message_line stack_trace_line
Rule 31    error_code_line -> ERROR_CODE NUMBER SEMICOLON
Rule 32    message_line -> MESSAGE STRING SEMICOLON
Rule 33    stack_trace_line -> STACK_TRACE LBRACKET stack_items RBRACKET SEMICOLON
Rule 34    stack_items -> stack_item COMMA stack_items
Rule 35    stack_items -> stack_item
Rule 36    stack_item -> LBRACE function_line COMMA line_line RBRACE
Rule 37    function_line -> FUNCTION STRING
Rule 38    line_line -> LINE COLON NUMBER
Rule 39    backup_block -> BEGIN_BACKUP backup_content END_BACKUP
Rule 40    backup_content -> source_line destination_line file_list_line backup_update_list_opt
Rule 41    source_line -> SOURCE STRING SEMICOLON
Rule 42    destination_line -> DESTINATION STRING SEMICOLON
Rule 43    file_list_line -> FILE_LIST LBRACKET file_entries RBRACKET SEMICOLON
Rule 44    file_entries -> STRING COMMA file_entries
Rule 45    file_entries -> STRING COMMA
Rule 46    backup_update_list_opt -> backup_update_list
Rule 47    backup_update_list_opt -> <empty>
Rule 48    backup_update_list -> backup_update_block backup_update_list
Rule 49    backup_update_list -> backup_update_block
Rule 50    backup_update_block -> BEGIN_BACKUP_UPDATE backup_update_content END_BACKUP_UPDATE
Rule 51    backup_update_content -> timestamp_line progress_line details_line
Rule 52    timestamp_line -> TIMESTAMP STRING SEMICOLON
Rule 53    progress_line -> PROGRESS NUMBER SEMICOLON
Rule 54    details_line -> DETAILS STRING SEMICOLON

Terminals, with rules where they appear

ARROW                : 17
AUDIO                : 19
BEGIN_BACKUP         : 39
BEGIN_BACKUP_UPDATE  : 50
BEGIN_BOOT_SEQUENCE  : 25
BEGIN_CRASH_REPORT   : 29
BEGIN_DIAGNOSTIC     : 14
CHECK                : 17
COLON                : 38
COMMA                : 17 34 36 44 45
DATE                 : 5
DESTINATION          : 42
DETAILS              : 54
END_BACKUP           : 39
END_BACKUP_UPDATE    : 50
END_BOOT_SEQUENCE    : 25
END_CRASH_REPORT     : 29
END_DIAGNOSTIC       : 14
ENTRY_MESSAGE        : 5
ENTRY_NUMBER         : 5
ERROR_CODE           : 31
FAIL                 : 23
FILE_LIST            : 43
FUNCTION             : 37
IDENTIFIER           : 
LATENCY              : 17
LBRACE               : 17 36
LBRACKET             : 5 33 43
LINE                 : 38
LOGLEVEL             : 5
MESSAGE              : 32
MINUS                : 
NETWORK              : 20
NUMBER               : 31 38 53
PASS                 : 22
PROGRESS             : 53
RBRACE               : 17 36
RBRACKET             : 5 33 43
RESULT               : 17
SEMICOLON            : 17 28 31 32 33 41 42 43 52 53 54
SOURCE               : 41
STACK_TRACE          : 33
STEP                 : 28
STORAGE              : 21
STRING               : 17 17 24 28 32 37 41 42 44 45 52 54
TIME                 : 5
TIMESTAMP            : 52
VIDEO                : 18
error                : 

Nonterminals, with rules where they appear

CHECK_STRING         : 
S                    : 0
backup_block         : 13
backup_content       : 39
backup_update_block  : 48 49
backup_update_content : 50
backup_update_list   : 46 48
backup_update_list_opt : 40
block                : 8 9
blocks               : 6 8
blocks_opt           : 4
boot_block           : 11
check_line           : 15 16
check_list           : 14 15
crash_block          : 12
crash_content        : 29
destination_line     : 40
details_line         : 51
diagnostic_block     : 10
entries              : 1 2
entry                : 2 3
error_code_line      : 30
file_entries         : 43 44
file_list_line       : 40
function_line        : 36
line_line            : 36
log_line             : 4
message_line         : 30
progress_line        : 51
result_value         : 17
source_line          : 40
stack_item           : 34 35
stack_items          : 33 34
stack_trace_line     : 30
step_line            : 26 27
step_list            : 25 26
timestamp_line       : 51

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . entries
    (2) entries -> . entry entries
    (3) entries -> . entry
    (4) entry -> . log_line blocks_opt
    (5) log_line -> . LBRACKET DATE TIME RBRACKET LOGLEVEL ENTRY_NUMBER ENTRY_MESSAGE

    LBRACKET        shift and go to state 5

    S                              shift and go to state 1
    entries                        shift and go to state 2
    entry                          shift and go to state 3
    log_line                       shift and go to state 4

state 1

    (0) S' -> S .



state 2

    (1) S -> entries .

    $end            reduce using rule 1 (S -> entries .)


state 3

    (2) entries -> entry . entries
    (3) entries -> entry .
    (2) entries -> . entry entries
    (3) entries -> . entry
    (4) entry -> . log_line blocks_opt
    (5) log_line -> . LBRACKET DATE TIME RBRACKET LOGLEVEL ENTRY_NUMBER ENTRY_MESSAGE

    $end            reduce using rule 3 (entries -> entry .)
    LBRACKET        shift and go to state 5

    entry                          shift and go to state 3
    entries                        shift and go to state 6
    log_line                       shift and go to state 4

state 4

    (4) entry -> log_line . blocks_opt
    (6) blocks_opt -> . blocks
    (7) blocks_opt -> .
    (8) blocks -> . block blocks
    (9) blocks -> . block
    (10) block -> . diagnostic_block
    (11) block -> . boot_block
    (12) block -> . crash_block
    (13) block -> . backup_block
    (14) diagnostic_block -> . BEGIN_DIAGNOSTIC check_list END_DIAGNOSTIC
    (25) boot_block -> . BEGIN_BOOT_SEQUENCE step_list END_BOOT_SEQUENCE
    (29) crash_block -> . BEGIN_CRASH_REPORT crash_content END_CRASH_REPORT
    (39) backup_block -> . BEGIN_BACKUP backup_content END_BACKUP

    LBRACKET        reduce using rule 7 (blocks_opt -> .)
    $end            reduce using rule 7 (blocks_opt -> .)
    BEGIN_DIAGNOSTIC shift and go to state 14
    BEGIN_BOOT_SEQUENCE shift and go to state 15
    BEGIN_CRASH_REPORT shift and go to state 16
    BEGIN_BACKUP    shift and go to state 17

    blocks_opt                     shift and go to state 7
    blocks                         shift and go to state 8
    block                          shift and go to state 9
    diagnostic_block               shift and go to state 10
    boot_block                     shift and go to state 11
    crash_block                    shift and go to state 12
    backup_block                   shift and go to state 13

state 5

    (5) log_line -> LBRACKET . DATE TIME RBRACKET LOGLEVEL ENTRY_NUMBER ENTRY_MESSAGE

    DATE            shift and go to state 18


state 6

    (2) entries -> entry entries .

    $end            reduce using rule 2 (entries -> entry entries .)


state 7

    (4) entry -> log_line blocks_opt .

    LBRACKET        reduce using rule 4 (entry -> log_line blocks_opt .)
    $end            reduce using rule 4 (entry -> log_line blocks_opt .)


state 8

    (6) blocks_opt -> blocks .

    LBRACKET        reduce using rule 6 (blocks_opt -> blocks .)
    $end            reduce using rule 6 (blocks_opt -> blocks .)


state 9

    (8) blocks -> block . blocks
    (9) blocks -> block .
    (8) blocks -> . block blocks
    (9) blocks -> . block
    (10) block -> . diagnostic_block
    (11) block -> . boot_block
    (12) block -> . crash_block
    (13) block -> . backup_block
    (14) diagnostic_block -> . BEGIN_DIAGNOSTIC check_list END_DIAGNOSTIC
    (25) boot_block -> . BEGIN_BOOT_SEQUENCE step_list END_BOOT_SEQUENCE
    (29) crash_block -> . BEGIN_CRASH_REPORT crash_content END_CRASH_REPORT
    (39) backup_block -> . BEGIN_BACKUP backup_content END_BACKUP

    LBRACKET        reduce using rule 9 (blocks -> block .)
    $end            reduce using rule 9 (blocks -> block .)
    BEGIN_DIAGNOSTIC shift and go to state 14
    BEGIN_BOOT_SEQUENCE shift and go to state 15
    BEGIN_CRASH_REPORT shift and go to state 16
    BEGIN_BACKUP    shift and go to state 17

    block                          shift and go to state 9
    blocks                         shift and go to state 19
    diagnostic_block               shift and go to state 10
    boot_block                     shift and go to state 11
    crash_block                    shift and go to state 12
    backup_block                   shift and go to state 13

state 10

    (10) block -> diagnostic_block .

    BEGIN_DIAGNOSTIC reduce using rule 10 (block -> diagnostic_block .)
    BEGIN_BOOT_SEQUENCE reduce using rule 10 (block -> diagnostic_block .)
    BEGIN_CRASH_REPORT reduce using rule 10 (block -> diagnostic_block .)
    BEGIN_BACKUP    reduce using rule 10 (block -> diagnostic_block .)
    LBRACKET        reduce using rule 10 (block -> diagnostic_block .)
    $end            reduce using rule 10 (block -> diagnostic_block .)


state 11

    (11) block -> boot_block .

    BEGIN_DIAGNOSTIC reduce using rule 11 (block -> boot_block .)
    BEGIN_BOOT_SEQUENCE reduce using rule 11 (block -> boot_block .)
    BEGIN_CRASH_REPORT reduce using rule 11 (block -> boot_block .)
    BEGIN_BACKUP    reduce using rule 11 (block -> boot_block .)
    LBRACKET        reduce using rule 11 (block -> boot_block .)
    $end            reduce using rule 11 (block -> boot_block .)


state 12

    (12) block -> crash_block .

    BEGIN_DIAGNOSTIC reduce using rule 12 (block -> crash_block .)
    BEGIN_BOOT_SEQUENCE reduce using rule 12 (block -> crash_block .)
    BEGIN_CRASH_REPORT reduce using rule 12 (block -> crash_block .)
    BEGIN_BACKUP    reduce using rule 12 (block -> crash_block .)
    LBRACKET        reduce using rule 12 (block -> crash_block .)
    $end            reduce using rule 12 (block -> crash_block .)


state 13

    (13) block -> backup_block .

    BEGIN_DIAGNOSTIC reduce using rule 13 (block -> backup_block .)
    BEGIN_BOOT_SEQUENCE reduce using rule 13 (block -> backup_block .)
    BEGIN_CRASH_REPORT reduce using rule 13 (block -> backup_block .)
    BEGIN_BACKUP    reduce using rule 13 (block -> backup_block .)
    LBRACKET        reduce using rule 13 (block -> backup_block .)
    $end            reduce using rule 13 (block -> backup_block .)


state 14

    (14) diagnostic_block -> BEGIN_DIAGNOSTIC . check_list END_DIAGNOSTIC
    (15) check_list -> . check_line check_list
    (16) check_list -> . check_line
    (17) check_line -> . CHECK STRING ARROW LBRACE RESULT result_value COMMA LATENCY STRING RBRACE SEMICOLON

    CHECK           shift and go to state 22

    check_list                     shift and go to state 20
    check_line                     shift and go to state 21

state 15

    (25) boot_block -> BEGIN_BOOT_SEQUENCE . step_list END_BOOT_SEQUENCE
    (26) step_list -> . step_line step_list
    (27) step_list -> . step_line
    (28) step_line -> . STEP STRING SEMICOLON

    STEP            shift and go to state 25

    step_list                      shift and go to state 23
    step_line                      shift and go to state 24

state 16

    (29) crash_block -> BEGIN_CRASH_REPORT . crash_content END_CRASH_REPORT
    (30) crash_content -> . error_code_line message_line stack_trace_line
    (31) error_code_line -> . ERROR_CODE NUMBER SEMICOLON

    ERROR_CODE      shift and go to state 28

    crash_content                  shift and go to state 26
    error_code_line                shift and go to state 27

state 17

    (39) backup_block -> BEGIN_BACKUP . backup_content END_BACKUP
    (40) backup_content -> . source_line destination_line file_list_line backup_update_list_opt
    (41) source_line -> . SOURCE STRING SEMICOLON

    SOURCE          shift and go to state 31

    backup_content                 shift and go to state 29
    source_line                    shift and go to state 30

state 18

    (5) log_line -> LBRACKET DATE . TIME RBRACKET LOGLEVEL ENTRY_NUMBER ENTRY_MESSAGE

    TIME            shift and go to state 32


state 19

    (8) blocks -> block blocks .

    LBRACKET        reduce using rule 8 (blocks -> block blocks .)
    $end            reduce using rule 8 (blocks -> block blocks .)


state 20

    (14) diagnostic_block -> BEGIN_DIAGNOSTIC check_list . END_DIAGNOSTIC

    END_DIAGNOSTIC  shift and go to state 33


state 21

    (15) check_list -> check_line . check_list
    (16) check_list -> check_line .
    (15) check_list -> . check_line check_list
    (16) check_list -> . check_line
    (17) check_line -> . CHECK STRING ARROW LBRACE RESULT result_value COMMA LATENCY STRING RBRACE SEMICOLON

    END_DIAGNOSTIC  reduce using rule 16 (check_list -> check_line .)
    CHECK           shift and go to state 22

    check_line                     shift and go to state 21
    check_list                     shift and go to state 34

state 22

    (17) check_line -> CHECK . STRING ARROW LBRACE RESULT result_value COMMA LATENCY STRING RBRACE SEMICOLON

    STRING          shift and go to state 35


state 23

    (25) boot_block -> BEGIN_BOOT_SEQUENCE step_list . END_BOOT_SEQUENCE

    END_BOOT_SEQUENCE shift and go to state 36


state 24

    (26) step_list -> step_line . step_list
    (27) step_list -> step_line .
    (26) step_list -> . step_line step_list
    (27) step_list -> . step_line
    (28) step_line -> . STEP STRING SEMICOLON

    END_BOOT_SEQUENCE reduce using rule 27 (step_list -> step_line .)
    STEP            shift and go to state 25

    step_line                      shift and go to state 24
    step_list                      shift and go to state 37

state 25

    (28) step_line -> STEP . STRING SEMICOLON

    STRING          shift and go to state 38


state 26

    (29) crash_block -> BEGIN_CRASH_REPORT crash_content . END_CRASH_REPORT

    END_CRASH_REPORT shift and go to state 39


state 27

    (30) crash_content -> error_code_line . message_line stack_trace_line
    (32) message_line -> . MESSAGE STRING SEMICOLON

    MESSAGE         shift and go to state 41

    message_line                   shift and go to state 40

state 28

    (31) error_code_line -> ERROR_CODE . NUMBER SEMICOLON

    NUMBER          shift and go to state 42


state 29

    (39) backup_block -> BEGIN_BACKUP backup_content . END_BACKUP

    END_BACKUP      shift and go to state 43


state 30

    (40) backup_content -> source_line . destination_line file_list_line backup_update_list_opt
    (42) destination_line -> . DESTINATION STRING SEMICOLON

    DESTINATION     shift and go to state 45

    destination_line               shift and go to state 44

state 31

    (41) source_line -> SOURCE . STRING SEMICOLON

    STRING          shift and go to state 46


state 32

    (5) log_line -> LBRACKET DATE TIME . RBRACKET LOGLEVEL ENTRY_NUMBER ENTRY_MESSAGE

    RBRACKET        shift and go to state 47


state 33

    (14) diagnostic_block -> BEGIN_DIAGNOSTIC check_list END_DIAGNOSTIC .

    BEGIN_DIAGNOSTIC reduce using rule 14 (diagnostic_block -> BEGIN_DIAGNOSTIC check_list END_DIAGNOSTIC .)
    BEGIN_BOOT_SEQUENCE reduce using rule 14 (diagnostic_block -> BEGIN_DIAGNOSTIC check_list END_DIAGNOSTIC .)
    BEGIN_CRASH_REPORT reduce using rule 14 (diagnostic_block -> BEGIN_DIAGNOSTIC check_list END_DIAGNOSTIC .)
    BEGIN_BACKUP    reduce using rule 14 (diagnostic_block -> BEGIN_DIAGNOSTIC check_list END_DIAGNOSTIC .)
    LBRACKET        reduce using rule 14 (diagnostic_block -> BEGIN_DIAGNOSTIC check_list END_DIAGNOSTIC .)
    $end            reduce using rule 14 (diagnostic_block -> BEGIN_DIAGNOSTIC check_list END_DIAGNOSTIC .)


state 34

    (15) check_list -> check_line check_list .

    END_DIAGNOSTIC  reduce using rule 15 (check_list -> check_line check_list .)


state 35

    (17) check_line -> CHECK STRING . ARROW LBRACE RESULT result_value COMMA LATENCY STRING RBRACE SEMICOLON

    ARROW           shift and go to state 48


state 36

    (25) boot_block -> BEGIN_BOOT_SEQUENCE step_list END_BOOT_SEQUENCE .

    BEGIN_DIAGNOSTIC reduce using rule 25 (boot_block -> BEGIN_BOOT_SEQUENCE step_list END_BOOT_SEQUENCE .)
    BEGIN_BOOT_SEQUENCE reduce using rule 25 (boot_block -> BEGIN_BOOT_SEQUENCE step_list END_BOOT_SEQUENCE .)
    BEGIN_CRASH_REPORT reduce using rule 25 (boot_block -> BEGIN_BOOT_SEQUENCE step_list END_BOOT_SEQUENCE .)
    BEGIN_BACKUP    reduce using rule 25 (boot_block -> BEGIN_BOOT_SEQUENCE step_list END_BOOT_SEQUENCE .)
    LBRACKET        reduce using rule 25 (boot_block -> BEGIN_BOOT_SEQUENCE step_list END_BOOT_SEQUENCE .)
    $end            reduce using rule 25 (boot_block -> BEGIN_BOOT_SEQUENCE step_list END_BOOT_SEQUENCE .)


state 37

    (26) step_list -> step_line step_list .

    END_BOOT_SEQUENCE reduce using rule 26 (step_list -> step_line step_list .)


state 38

    (28) step_line -> STEP STRING . SEMICOLON

    SEMICOLON       shift and go to state 49


state 39

    (29) crash_block -> BEGIN_CRASH_REPORT crash_content END_CRASH_REPORT .

    BEGIN_DIAGNOSTIC reduce using rule 29 (crash_block -> BEGIN_CRASH_REPORT crash_content END_CRASH_REPORT .)
    BEGIN_BOOT_SEQUENCE reduce using rule 29 (crash_block -> BEGIN_CRASH_REPORT crash_content END_CRASH_REPORT .)
    BEGIN_CRASH_REPORT reduce using rule 29 (crash_block -> BEGIN_CRASH_REPORT crash_content END_CRASH_REPORT .)
    BEGIN_BACKUP    reduce using rule 29 (crash_block -> BEGIN_CRASH_REPORT crash_content END_CRASH_REPORT .)
    LBRACKET        reduce using rule 29 (crash_block -> BEGIN_CRASH_REPORT crash_content END_CRASH_REPORT .)
    $end            reduce using rule 29 (crash_block -> BEGIN_CRASH_REPORT crash_content END_CRASH_REPORT .)


state 40

    (30) crash_content -> error_code_line message_line . stack_trace_line
    (33) stack_trace_line -> . STACK_TRACE LBRACKET stack_items RBRACKET SEMICOLON

    STACK_TRACE     shift and go to state 51

    stack_trace_line               shift and go to state 50

state 41

    (32) message_line -> MESSAGE . STRING SEMICOLON

    STRING          shift and go to state 52


state 42

    (31) error_code_line -> ERROR_CODE NUMBER . SEMICOLON

    SEMICOLON       shift and go to state 53


state 43

    (39) backup_block -> BEGIN_BACKUP backup_content END_BACKUP .

    BEGIN_DIAGNOSTIC reduce using rule 39 (backup_block -> BEGIN_BACKUP backup_content END_BACKUP .)
    BEGIN_BOOT_SEQUENCE reduce using rule 39 (backup_block -> BEGIN_BACKUP backup_content END_BACKUP .)
    BEGIN_CRASH_REPORT reduce using rule 39 (backup_block -> BEGIN_BACKUP backup_content END_BACKUP .)
    BEGIN_BACKUP    reduce using rule 39 (backup_block -> BEGIN_BACKUP backup_content END_BACKUP .)
    LBRACKET        reduce using rule 39 (backup_block -> BEGIN_BACKUP backup_content END_BACKUP .)
    $end            reduce using rule 39 (backup_block -> BEGIN_BACKUP backup_content END_BACKUP .)


state 44

    (40) backup_content -> source_line destination_line . file_list_line backup_update_list_opt
    (43) file_list_line -> . FILE_LIST LBRACKET file_entries RBRACKET SEMICOLON

    FILE_LIST       shift and go to state 55

    file_list_line                 shift and go to state 54

state 45

    (42) destination_line -> DESTINATION . STRING SEMICOLON

    STRING          shift and go to state 56


state 46

    (41) source_line -> SOURCE STRING . SEMICOLON

    SEMICOLON       shift and go to state 57


state 47

    (5) log_line -> LBRACKET DATE TIME RBRACKET . LOGLEVEL ENTRY_NUMBER ENTRY_MESSAGE

    LOGLEVEL        shift and go to state 58


state 48

    (17) check_line -> CHECK STRING ARROW . LBRACE RESULT result_value COMMA LATENCY STRING RBRACE SEMICOLON

    LBRACE          shift and go to state 59


state 49

    (28) step_line -> STEP STRING SEMICOLON .

    STEP            reduce using rule 28 (step_line -> STEP STRING SEMICOLON .)
    END_BOOT_SEQUENCE reduce using rule 28 (step_line -> STEP STRING SEMICOLON .)


state 50

    (30) crash_content -> error_code_line message_line stack_trace_line .

    END_CRASH_REPORT reduce using rule 30 (crash_content -> error_code_line message_line stack_trace_line .)


state 51

    (33) stack_trace_line -> STACK_TRACE . LBRACKET stack_items RBRACKET SEMICOLON

    LBRACKET        shift and go to state 60


state 52

    (32) message_line -> MESSAGE STRING . SEMICOLON

    SEMICOLON       shift and go to state 61


state 53

    (31) error_code_line -> ERROR_CODE NUMBER SEMICOLON .

    MESSAGE         reduce using rule 31 (error_code_line -> ERROR_CODE NUMBER SEMICOLON .)


state 54

    (40) backup_content -> source_line destination_line file_list_line . backup_update_list_opt
    (46) backup_update_list_opt -> . backup_update_list
    (47) backup_update_list_opt -> .
    (48) backup_update_list -> . backup_update_block backup_update_list
    (49) backup_update_list -> . backup_update_block
    (50) backup_update_block -> . BEGIN_BACKUP_UPDATE backup_update_content END_BACKUP_UPDATE

    END_BACKUP      reduce using rule 47 (backup_update_list_opt -> .)
    BEGIN_BACKUP_UPDATE shift and go to state 65

    backup_update_list_opt         shift and go to state 62
    backup_update_list             shift and go to state 63
    backup_update_block            shift and go to state 64

state 55

    (43) file_list_line -> FILE_LIST . LBRACKET file_entries RBRACKET SEMICOLON

    LBRACKET        shift and go to state 66


state 56

    (42) destination_line -> DESTINATION STRING . SEMICOLON

    SEMICOLON       shift and go to state 67


state 57

    (41) source_line -> SOURCE STRING SEMICOLON .

    DESTINATION     reduce using rule 41 (source_line -> SOURCE STRING SEMICOLON .)


state 58

    (5) log_line -> LBRACKET DATE TIME RBRACKET LOGLEVEL . ENTRY_NUMBER ENTRY_MESSAGE

    ENTRY_NUMBER    shift and go to state 68


state 59

    (17) check_line -> CHECK STRING ARROW LBRACE . RESULT result_value COMMA LATENCY STRING RBRACE SEMICOLON

    RESULT          shift and go to state 69


state 60

    (33) stack_trace_line -> STACK_TRACE LBRACKET . stack_items RBRACKET SEMICOLON
    (34) stack_items -> . stack_item COMMA stack_items
    (35) stack_items -> . stack_item
    (36) stack_item -> . LBRACE function_line COMMA line_line RBRACE

    LBRACE          shift and go to state 72

    stack_items                    shift and go to state 70
    stack_item                     shift and go to state 71

state 61

    (32) message_line -> MESSAGE STRING SEMICOLON .

    STACK_TRACE     reduce using rule 32 (message_line -> MESSAGE STRING SEMICOLON .)


state 62

    (40) backup_content -> source_line destination_line file_list_line backup_update_list_opt .

    END_BACKUP      reduce using rule 40 (backup_content -> source_line destination_line file_list_line backup_update_list_opt .)


state 63

    (46) backup_update_list_opt -> backup_update_list .

    END_BACKUP      reduce using rule 46 (backup_update_list_opt -> backup_update_list .)


state 64

    (48) backup_update_list -> backup_update_block . backup_update_list
    (49) backup_update_list -> backup_update_block .
    (48) backup_update_list -> . backup_update_block backup_update_list
    (49) backup_update_list -> . backup_update_block
    (50) backup_update_block -> . BEGIN_BACKUP_UPDATE backup_update_content END_BACKUP_UPDATE
